--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@
 
 
 :root{
-  --td-brand-color: #F97316 !important
+  --td-brand-color: #ffb22c !important
 }
 .cke_editable img{
   object-fit: contain;
@@ -73,11 +73,11 @@ input[type=number] {
 :root[theme-mode="light"] {
   --td-brand-color-1: #FFF7ED !important;
   --td-brand-color-2: #FED7AA !important;
-  --td-brand-color-3: #F9731687 !important;
-  --td-brand-color-4: #F97316 !important;
-  --td-brand-color-5: #F97316 !important;
+  --td-brand-color-3: #ffb22c87 !important;
+  --td-brand-color-4: #ffb22c !important;
+  --td-brand-color-5: #ffb22c !important;
   --td-brand-color-6: #FB923C !important;
-  --td-brand-color-7: #F97316 !important;
+  --td-brand-color-7: #ffb22c !important;
   --td-brand-color-8: #EA580C !important;
   --td-brand-color-9: #C2410C !important;
   --td-brand-color-10: #9A3412 !important;
